Uploading challeng files

--- a/index.html
+++ b/index.html
@@ -44,23 +44,23 @@
                     <ul class="list-group bg-dark">
                         <li class="list-group-item bg-dark">
                             <label for="date">Enter Date</label>
-                            <input type="text" placeholder="1/10/2010" id="datetime">
+                            <p><input type="text" placeholder="1/10/2010" id="datetime"></p>
                         </li>
                         <li class="list-group-item bg-dark">
                             <label for="city">Enter a City</label>
-                            <input type="text" placeholder="grants pass" id="city">
+                            <p><input type="text" placeholder="grants pass" id="city"></p>
                         </li>
                         <li class="list-group-item bg-dark">
                             <label for="state">Enter a State</label>
-                            <input type="text" placeholder="ca" id="state">
+                            <p><input type="text" placeholder="ca" id="state"></p>
                         </li>
                         <li class="list-group-item bg-dark">
                             <label for="country">Enter a Country</label>
-                            <input type="text" placeholder="us" id="country">
+                            <p><input type="text" placeholder="us" id="country"></p>
                         </li>
                         <li class="list-group-item bg-dark">
                             <label for="shape">Enter a Shape</label>
-                            <input type="text" placeholder="triangle" id="shape">
+                            <p><input type="text" placeholder="triangle" id="shape"></p>
                         </li>
                     </ul>
                 </form>
